--- a/src/SetAffinity/SetAffinity.csproj
+++ b/src/SetAffinity/SetAffinity.csproj
@@ -8,4 +8,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.0" />
+  </ItemGroup>
+
 </Project>
