--- a/src/SetAffinity/SetAffinity.csproj
+++ b/src/SetAffinity/SetAffinity.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.1" />
     <PackageReference Include="System.Management" Version="10.0.1" />
   </ItemGroup>
 
